--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .header {
-    font-weight: bold;
+    font-weight:bold;
 
 }
 
@@ -18,17 +18,19 @@ body {
 }
 
 .headerlogo {
-    margin-right:0px;
+    float:left;
+    margin-right:10px;
 }
 
 .headerlogo > img {
     height: 60px;
     width: 60px;
+    margin-bottom: 50px;
 }
 
 .headername {
     font-size: 22px;
-    font-family: "Lato sans-serif;
+    font-family: "Lato sans-serif";
     text-shadow: 5px 5px 5px #a7c3ef;
     color: #06327a;
     padding: 15px;
@@ -73,30 +75,27 @@ nav ul li {
 }
 
 .welcomeimage {
-    display:block;
-    position:absolute;
-    margin: auto;
+    position:relative;
+    width:100%;
 }
 
-.welcometext > header{
-    z-index: -1:
+.welcomeimage >h1 {
+    text-align: center;
+    position: absolute;
+    top: 200px;
+    width:100%;
+    color:blue;
 }
- .container-1 {
-     display:flex;
- }
 
- .container-1 figure{
-     border:1px #ccc solid;
-     padding:10px;
- }
+.para1{
+    text-align: center;
+    position: absolute;
+    top: 400px;
+    width: 100%;
+    color:white;
 
- .box-1 {
-     flex:1;
- }
+}
 
- .box-2 {
-     flex:1;
- }
-.box-3 {
-    flex:1;
+footer {
+
 }
