--- a/styles/otherTraining.css
+++ b/styles/otherTraining.css
@@ -23,9 +23,6 @@ body {
     height: 60px;
     width: 60px;
     margin-bottom: 50px;
-
-
-
 }
 .headerlogo > img {
     height: 60px;
@@ -73,7 +70,7 @@ nav ul li {
     font-size: 18px;
     float: right;
     padding: 12px;
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
@@ -98,30 +95,101 @@ nav ul li {
 
 }
 
-.box-1 {
-    flex:1;
+.box-1{
+    flex: 1;
     background-color: #DBEFE7;
     text-align: center;
 }
 
+.box-1 > h4{
+    flex-grow: 1;
+    margin-top: 200px;
+}
+
 .box-2 {
+    flex:1;
+    background-color: #F2F3F2;
+    text-align: center;
+}
+
+.box-2 > h4{
+    margin-top:200px;
+}
+
+.box-3 {
+    flex:1;
+    background-color: #A69B8C;
+    text-align: center;
+}
+
+.box-3 h4 {
+    margin-top: 160px;
+}
+
+.box-4 {
+    flex:1;
+    background-color: #B2C8C6;
+    text-align: center;
+}
+.box-4 h4{
+    margin-top:115px;
+}
+.box-5 {
+    flex:1;
+    background-color: #D6CCBC;
+    text-align: center;
+}
+
+
+.container-2{
+    display:flex;
+    width:100%;
+    height: 400px;
+    margin-top: 10px;
+
+
+}
+
+.container-2 div{
+    border: 3px #ccc solid;
+    padding: 10px;
+    margin-right: 4px;
+
+}
+
+.box-6 {
+    flex:1;
+    background-color: #A69B8C ;
+    text-align: center;
+}
+
+.box-7 {
     flex:1;
     background-color: #B2C8C6;
     text-align: center;
 
 }
 
-.box-3 {
+.box-8 {
     flex:1;
     background-color: #F2F3F2;
     text-align: center;
 }
 
-.box-4 {
+.box-9 {
     flex:1;
-    background-color: #A69B8C;
+    background-color: #D6CCBC;
     text-align: center;
 }
+
+.box-10 {
+    flex:1;
+    background-color: #DBEFE7;
+    text-align: center;
+}
+
+
+
 
 footer {
     flex-direction: column;
