--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body {
     width: 1000px;
     margin-right: auto;
     margin-left: auto;
-    font-family: Verdana;
+    font-family: Verdana, Arial;
 }
 
 .header {
@@ -75,39 +75,42 @@ nav ul li {
     text-decoration: none;
 }
 
-h1 {
-    font-size: 50px;
-}
-h2 {
-    font-size: 32px;
-    font-weight: normal;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-}
-
-h6 {
-    font-size: 22px;
-}
-.banner h1, .banner h2, .banner h6 {
-    margin: 0;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
-
 .banner {
-    color:black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-image: url("../Images/elearning.png");
+    position: relative;
+    margin-top: 10px;
+    width: 1000px;
+    height: 700px;
 
 }
+.banner-text {
+    font-size: 25px;
+    position: absolute;
+    width:98%;
+    color:black;
+    margin-top:350px;
+    padding:10px;
+    text-align: center;
+    background-color: #B2C8C6;
+    opacity: 0.75;
 
+}
+.welcometext{
+    color:black;
+    text-align:center;
+    background-color: #cccccc;
+    font-size: 15px;
+    font-weight: normal;
+    letter-spacing: 2px;
+    opacity: 0.75;
+
+}
 
 .container-1 {
     display: flex;
     width: 100%;
     margin-top: 10px;
+
 
 }
 
@@ -116,27 +119,63 @@ h6 {
     padding: 10px;
     margin-right: 4px;
     align-items: center;
-    height: 200px;
+    height: 300px;
 }
 
 .box-1 {
-    flex: 1;
+    flex:1;
+    display:block;
+    background-image: url("../Images/elearning4.png");
     text-align: center;
-
-
+    background-size: 100%;
+    width:150px;
+    background-repeat: no-repeat;
+    height: 100px;
 }
+/*.gobtn {
+    display:block;
+    padding:7px 15px;
+    background-color: black;
+    color:white;
+    text-decoration: none;
+    margin-top: 10px;
+    border-radius: 3px;
+}*/
+
+.box-1 h2 {
+    border: 1px solid white;
+    color:white;
+    background-color: black;
+    opacity: .75;
+    padding: 15px;
+    margin-top: 125px;
+    width:200px;
+    margin-left: 120px;
+}
+
 
 .box-2 {
     flex: 1;
     background-color: #B2C8C6;
     text-align: center;
+    width:150px;
+    height: 100px;
+
+}
+
+.box-2 h3 p {
+    display:flex;
+    padding: 15px;
+    margin-top: 200px;
+    width: 90%;
+    justify-content: space-around;
 
 }
 
 .container-2 {
     display: flex;
-    width: 100%;
-    margin-top: 10px;
+width: 100%;
+margin-top: 10px;
 
 }
 
@@ -145,7 +184,7 @@ h6 {
     padding: 10px;
     margin-right: 4px;
     align-items: center;
-    height: 200px;
+    height: 300px;
 }
 
 .box-3 {
@@ -158,7 +197,19 @@ h6 {
 .box-4 {
     flex: 1;
     text-align: center;
+    background-image: url("../Images/elearning3.png");
+    background-size: 100%;
 
+}
+.box-4 h2 {
+    border: 1px solid white;
+    color:white;
+    background-color: black;
+    opacity: .75;
+    padding: 15px;
+    margin-top: 125px;
+    width:200px;
+    margin-left: 120px;
 }
 
 .container-3 {
@@ -173,13 +224,25 @@ h6 {
     padding: 10px;
     margin-right: 4px;
     align-items: center;
-    height: 200px;
+    height: 300px;
 }
 
 .box-5 {
     flex: 1;
     text-align: center;
+    background-image: url("../Images/elearning2.png");
+    background-size: 100%;
 
+}
+.box-5 h2 {
+    border: 1px solid white;
+    color:white;
+    background-color: black;
+    opacity: .75;
+    padding: 15px;
+    margin-top: 125px;
+    width:200px;
+    margin-left: 120px;
 }
 
 .box-6 {
