--- a/styles/style.css
+++ b/styles/style.css
@@ -95,23 +95,37 @@ nav ul li {
     opacity: 0.75;
 
 }
+
 .welcometext{
+    margin:auto;
+    margin-top: -75px;
+    max-width:675px;
+    background-color: #cccccc;
+    position: relative;
+}
+.welcometext h2{
     color:black;
     text-align:center;
-    background-color: #cccccc;
-    font-size: 15px;
+    opacity:0.75;
+    font-size: 20px;
     font-weight: normal;
     letter-spacing: 2px;
-    opacity: 0.75;
+    padding:10px;
+    line-height: 1.5;
+}
 
+.trainingtext{
+    color:black;
+    text-align:center;
+    font-size:15px;
+    text-transform: uppercase;
+    padding:20px;
 }
 
 .container-1 {
     display: flex;
     width: 100%;
     margin-top: 10px;
-
-
 }
 
 .container-1 div {
@@ -132,18 +146,14 @@ nav ul li {
     background-repeat: no-repeat;
     height: 100px;
 }
-/*.gobtn {
-    display:block;
-    padding:7px 15px;
-    background-color: black;
-    color:white;
+
+.box-1 a {
     text-decoration: none;
-    margin-top: 10px;
-    border-radius: 3px;
-}*/
+}
 
 .box-1 h2 {
     border: 1px solid white;
+    text-decoration: none;
     color:white;
     background-color: black;
     opacity: .75;
@@ -155,27 +165,25 @@ nav ul li {
 
 
 .box-2 {
-    flex: 1;
+    flex:1;
     background-color: #B2C8C6;
     text-align: center;
     width:150px;
     height: 100px;
-
+    font-size: 25px;
+    line-height: 50px;
 }
 
-.box-2 h3 p {
-    display:flex;
-    padding: 15px;
-    margin-top: 200px;
-    width: 90%;
-    justify-content: space-around;
 
+.box-2 {
+    font-size: 25px;
+    line-height: 50px;
 }
 
 .container-2 {
     display: flex;
-width: 100%;
-margin-top: 10px;
+    width: 100%;
+    margin-top: 10px;
 
 }
 
@@ -191,8 +199,13 @@ margin-top: 10px;
     flex: 1;
     background-color: #A69B8C;
     text-align: center;
-
 }
+
+.box-3 {
+    font-size: 25px;
+    line-height: 50px;
+}
+
 
 .box-4 {
     flex: 1;
@@ -210,6 +223,9 @@ margin-top: 10px;
     margin-top: 125px;
     width:200px;
     margin-left: 120px;
+}
+.box-4 a {
+    text-decoration: none;
 }
 
 .container-3 {
@@ -244,21 +260,37 @@ margin-top: 10px;
     width:200px;
     margin-left: 120px;
 }
+.box-5 a {
+    text-decoration: none;
+}
 
 .box-6 {
     flex: 1;
     background-color: #DBEFE7;
     text-align: center;
-
+}
+.box-6 {
+font-size: 25px;
+line-height: 50px;
 }
 
 footer {
-     flex-direction: column;
      text-align: center;
      color: black;
-     clear: both;
      background-color: #D6CCBC;
-     margin: 10px 0px 10px;
+     margin: 10px;
      padding: 5px;
+ }
+
+.fbcontainer {
+    flex-direction: row;
+}
+
+.fbcontainer {
+    padding:15px;
+
+}
+ .twitter a {
+     text-decoration: none;
  }
 
