--- a/styles/style.css
+++ b/styles/style.css
@@ -145,11 +145,8 @@ nav ul li {
     background-size: 100%;
 }
 
-.square-1 a, .square-4 a, .square-5 a {
-    text-decoration: none;
-}
-
-.square-1 h2, .square-4 h2, .square-5 h2 {
+.btn-secondary {
+    font-size: 25px;
     border: 1px solid white;
     color:white;
     background-color: black;
@@ -157,7 +154,16 @@ nav ul li {
     padding: 15px;
     margin-top: 125px;
     width:200px;
-    margin-left: 120px;
+    margin-left: 20px;
+}
+
+.square-1 button:hover, .square-4 button:hover, .square-5 button:hover {
+    border: 1px solid black;
+    color:black;
+    background-color: white;
+    opacity: .75;
+    cursor: pointer;
+
 }
 
 
@@ -257,9 +263,16 @@ footer {
     width:100%;
     color:black;
 }
+
+
 .box-1{
-    background-color: #DBEFE7;
+    background-color:#F2F3F2;
 }
+
+.box-1 hover {
+    background-color: #cccccc;
+}
+
 
 .box-2 {
     background-color: #F2F3F2;
