--- a/styles/style.css
+++ b/styles/style.css
@@ -76,29 +76,29 @@ nav ul li {
 }
 
 .banner {
-    background-image: url("../Images/elearning.png");
+    /*background-image: url("../Images/elearning.png");*/
     position: relative;
     margin-top: 10px;
-    width: 1000px;
-    height: 700px;
+    width: 100%;
+    height: 100px;
 
 }
 .banner-text {
-    font-size: 25px;
     position: absolute;
-    width:98%;
-    color:black;
-    margin-top:350px;
+    top:-500px;
+    width: 100%;
     padding:10px;
     text-align: center;
     background-color: #B2C8C6;
     opacity: 0.75;
+    font-size: 25px;
+    color:black;
 
 }
 
 .welcometext{
     margin:auto;
-    margin-top: -75px;
+    margin-top: -200px;
     max-width:675px;
     background-color: #cccccc;
     position: relative;
@@ -332,4 +332,5 @@ footer {
     background-color: #DBEFE7;
     text-align: center;
 }
+
 
